[#315] Win32 build updated with editor.